<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name_signet" tools:ignore="UnusedResources">Iris Wallet Reckless Signet</string>
    <string name="app_name_testnet" tools:ignore="UnusedResources">Iris Wallet Reckless Testnet</string>
    <string name="app_name_mainnet" tools:ignore="UnusedResources">Iris Wallet Reckless</string>
    <string name="failed_transfer">Failed transfer</string>
    <string name="ongoing_transfer">Ongoing transfer</string>
    <string name="not_available" translatable="false">N/A</string>
    <string name="bitcoin_unit" translatable="false">SAT</string>
    <string name="positive_amount" translatable="false">+%s</string>
    <string name="negative_amount" translatable="false">-%s</string>
    <string name="uppercase_letters_and_digits">ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="letters_and_digits">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789</string>
    <string name="letters_digits_space_and_dash">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789 -</string>
    <string name="app_exception_msg">%1$s: %2$s</string>
    <string name="recipient_error">Error preparing receive data</string>
    <string name="clipboard_filled">Data copied to clipboard</string>
    <string name="welcome">Welcome!</string>
    <string name="first_run_disclaimer">Iris Wallet is intended to be used to test and experiment
        with the RGB protocol on the Bitcoin %s network.
        The app is currently using experimental libraries, so breaking changes can happen.
        Please note that this app is not optimised neither for efficiency nor for privacy, and it
        should be used for testing purposes only.</string>
    <string name="first_run_create">Create</string>
    <string name="first_run_restore">Restore</string>
    <string name="i_understand">I understand</string>
    <string name="restore_info_positive">Understood</string>
    <string name="restore_info_title">The restore procedure is about to begin</string>
    <string name="restore_info_message">You will need to enter the mnemonic phrase. Be careful not to be observed while entering it.
        \n\nYou will then need to select the Google account where the backup is stored. It needs to be the same account that has been chosen at backup configuration time. Using any other account will cause the restore to fail.
        \n\nMake sure you are restoring a recent backup. Restoring an old one might lead to issues.
        \n\nDo not use the same wallet on more than one device (e.g. restoring to a new device while still using the original one) as it causes serious issues that lead to the loss of funds.</string>
    <string name="accept">Accept</string>
    <string name="do_not_accept">Do not accept</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="hide">Hide</string>
    <string name="unhide">Unhide</string>
    <string name="OK">OK</string>
    <string name="confirm_delete_transfer">Are you sure you want to delete this transfer?</string>
    <string name="confirm_hide_asset">This will hide the asset from the main list. Once hidden, the
        only way to see the asset again will be to enable the “Show hidden assets” setting. Once
        shown, it will be possible to unhide it clicking the dedicated icon.\n\nAre you sure you
        want to proceed?</string>
    <string name="confirm_unhide_asset">This will make the asset visible on the main list, even when
        the “Show hidden assets” setting is disabled.\n\nDo you want to proceed?</string>
    <string name="address">Address</string>
    <string name="address_or_invoice">Address or bitcoin invoice</string>
    <string name="amount">Amount</string>
    <string name="amount_to_pay">Amount to pay</string>
    <string name="fee_rate">Fee rate in sat/vbyte</string>
    <string name="total_balance">Total Balance</string>
    <string name="spendable_balance">Spendable Balance</string>
    <string name="blinded_utxo_or_invoice">blinded UTXO or RGB invoice</string>
    <string name="date">Date</string>
    <string name="issuance_date">Issuance date</string>
    <string name="send">Send</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="asset_type">Asset type</string>
    <string name="issued_supply">Issued supply</string>
    <string name="asset_precision">Asset precision</string>
    <string name="asset_description">Asset description</string>
    <string name="err_refreshing_asset_details">Error refreshing asset details</string>
    <string name="err_deleting_transfer">Error deleting transfer</string>
    <string name="err_hiding_asset">Error hiding asset</string>
    <string name="err_unhiding_asset">Error unhiding asset</string>
    <string name="err_issuing_asset">Error issuing asset</string>
    <string name="err_refreshing_assets">Error refreshing assets</string>
    <string name="err_listing_unspents">Error listing unspents</string>
    <string name="err_showing_metadata">Error showing asset metadata</string>
    <string name="err_sending">Error sending</string>
    <string name="err_accessing_backup_page">Cannot access to backup page</string>
    <string name="err_notification_permission">Cannot proceed without notification permission</string>
    <string name="faucet_no_assets">There are no available assets</string>
    <string name="sent_txid">Sent %s</string>
    <string name="cancelled_scan_permissions">Cancelled scan due to missing camera
        permission</string>
    <string name="insufficient_bitcoins">insufficient bitcoins</string>
    <string name="insufficient_bitcoins_for_rgb">insufficient bitcoins. %s SATs are needed in order
        to operate on RGB with the Iris wallet.</string>
    <string name="insufficient_fees">insufficient fees</string>
    <string name="invalid_recipient_id">Invalid recipient ID</string>
    <string name="invalid_transport_endpoints">Invalid transport endpoints</string>
    <string name="invalid_consignment_endpoint">Invalid consignment endpoint</string>
    <string name="invalid_rgb_recipient">Data is neither a blinded UTXO nor an RGB invoice</string>
    <string name="invalid_btc_recipient">Data is neither a bitcoin address nor invoice</string>
    <string name="invalid_btc_invoice_address">The given bitcoin invoice contains an invalid address</string>
    <string name="asset_id_mismatch">Asset ID mismatch, the given invoice is for asset "%s"</string>
    <string name="expired_rgb_invoice">The given RGB invoice is expired"</string>
    <string name="invalid_btc_invoice_scheme">The given bitcoin invoice has an invalid schema</string>
    <string name="invalid_address_network">Address for wrong network</string>
    <string name="using_default_consignment_endpoint">Using default URL for the consignment endpoint
        since no one has been provided in the invoice</string>
    <string name="blinded_utxo_already_used">Blinded UTXO already used</string>
    <string name="reached_max_assets">reached max assets</string>
    <string name="back_again_to_exit">Go back again to exit from app</string>
    <string name="back_disabled">Operation in progress, back is temporarily disabled</string>
    <string name="blinded_utxo_expiry">The blinded UTXO in this invoice will expire in 24 hours
        after its creation</string>
    <string name="blinded_utxo_asset">%s and will be valid only for this asset</string>
    <string name="connection_err">Connection issues: some functions may not work</string>
    <string name="menu_unspent_list">View unspent list</string>
    <string name="menu_help_page">Help</string>
    <string name="menu_about_page">About</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_backup">Backup</string>
    <string name="sample_asset_id">rgb1tmh9cy82j69q098up3s3trvz04chmwr88y227teppylyp7gvqhfs7ev4gy</string>
    <string name="sample_asset_name">USD Tether</string>
    <string name="sample_asset_ticker">USDT</string>
    <string name="sample_datetime">1970–01–01 00:00:00</string>
    <string name="sample_asset_type">RGB20</string>
    <string name="sample_issued_supply">18446744073709551615</string>
    <string name="sample_precision">0</string>
    <string name="sample_asset_description">A very cool asset</string>
    <string name="asset_media_no_preview">Preview of media file is not available</string>
    <string name="collectible_image_description">Collectible image</string>
    <string name="issue_button">Issue asset</string>
    <string name="upload_file_button">Upload file</string>
    <string name="asset_file">Asset file</string>
    <string name="asset_ticker">Asset ticker</string>
    <string name="short_identifier">short identifier</string>
    <string name="asset_name">Asset name</string>
    <string name="name_of_the_asset">name of the asset</string>
    <string name="description_of_the_asset">description of the asset</string>
    <string name="total_supply">Total supply</string>
    <string name="amount_to_issue">amount to issue</string>
    <string name="help_faucet_label">Where can I get %s bitcoins?</string>
    <string name="help_faucet_text">You can get testnet bitcoin by using on of the many available
        faucet, below are linked few examples but you can always find more using a search
        engine:</string>
    <string name="help_learn_more_label">Where can I learn more about RGB?</string>
    <string name="help_learn_more_text">Visit rgb.info for resources and documentation.</string>
    <string name="help_internal_label">Why do I see outgoing Bitcoin transactions that I didn\'t
        authorise?</string>
    <string name="help_internal_text">In the RGB protocol assets need to be assigned to a Bitcoin
        output, if you do not have available UTXOs to receive, issue, or send yourself change
        assets, the wallet will use the available bitcoin balance to generate new UTXOs.
        Such transactions are marked in the transaction list as “internal”.</string>
    <string name="help_min_balance_label">What is the minimum bitcoin balance needed to issue and
        receive RGB assets?</string>
    <string name="help_min_balance_text">To create a set of UTXOs needed to issue and receive
        assets the initial bitcoin balance needs to be at least 10,000 satoshis.</string>
    <string name="help_feedback_label">Where can I send feedback or ask for support?</string>
    <string name="help_feedback_text">For support and feedback there is a dedicated Telegram
        group: https://t.me/IrisWallet</string>
    <string name="menu_faucets">Faucets</string>
    <string name="menu_issue_rgb20_asset">Issue new RGB20 asset</string>
    <string name="pref_pin_login_title">Ask authentication for logging in to the app</string>
    <string name="pref_pin_login_summary">Enable android authentication for logging in to the
        app</string>
    <string name="pref_pin_actions_title">Ask authentication for important operations</string>
    <string name="pref_pin_actions_summary">Enable android authentication for spending
        operations</string>
    <string name="pref_electrum_url_title">Specify an electrum URL</string>
    <string name="pref_electrum_url_summary">Specify which electrum server to use for Bitcoin and
        RGB operations</string>
    <string name="pref_electrum_url_dialog_title">Insert an electrum URL</string>
    <string name="pref_electrum_url_dialog_summary">Insert an electrum server URL to use for Bitcoin and RGB operations.</string>
    <string name="pref_proxy_url_title">Specify an RGB proxy URL</string>
    <string name="pref_proxy_url_summary">Specify which proxy server to use for RGB
        operations</string>
    <string name="pref_proxy_url_dialog_title">Insert an RGB proxy URL</string>
    <string name="pref_proxy_url_dialog_summary">Insert a proxy server URL to use for RGB operations.</string>
</resources>