<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/issueRgb20AssetFragment"
        android:icon="@drawable/ic_issue"
        android:title="@string/menu_issue_rgb20_asset" />
    <item android:id="@+id/issueRgb121AssetFragment"
        android:icon="@drawable/ic_issue"
        android:title="@string/menu_issue_rgb121_asset" />
    <item android:id="@+id/faucetFragment"
        android:icon="@drawable/ic_faucets"
        android:title="@string/menu_faucets" />
    <item android:id="@+id/bitcoinUnspentFragment"
        android:icon="@drawable/ic_unspent_list"
        android:title="@string/menu_unspent_list" />
    <item android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings" />
    <item android:id="@+id/backupFragment"
        android:icon="@drawable/ic_backup"
        android:title="@string/menu_backup" />
    <item android:id="@+id/helpPageFragment"
        android:icon="@drawable/ic_help"
        android:title="@string/menu_help_page" />
    <item android:id="@+id/aboutPageFragment"
        android:icon="@drawable/ic_about"
        android:title="@string/menu_about_page" />
</menu>
