<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HelpPageFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="@dimen/big_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/helpLearnMoreLabelTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_learn_more_label"
                    style="@style/help_title" />

                <TextView
                    android:id="@+id/helpLearnMoreTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_learn_more_text"
                    style="@style/help_text" />

                <TextView
                    android:id="@+id/helpInternalLabelTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_internal_label"
                    style="@style/help_title" />

                <TextView
                    android:id="@+id/helpInternalTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_internal_text"
                    style="@style/help_text" />

                <TextView
                    android:id="@+id/helpMinBalanceLabelTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_min_balance_label"
                    style="@style/help_title" />

                <TextView
                    android:id="@+id/helpMinBalanceTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_min_balance_text"
                    style="@style/help_text" />

                <TextView
                    android:id="@+id/helpFeedbackLabelTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_feedback_label"
                    style="@style/help_title" />

                <TextView
                    android:id="@+id/helpFeedbackTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_feedback_text"
                    style="@style/help_text" />

                <TextView
                    android:id="@+id/helpFaucetLabelTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_faucet_label"
                    style="@style/help_title" />

                <TextView
                    android:id="@+id/helpFaucetTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_faucet_text"
                    android:layout_marginBottom="@dimen/small_size"
                    style="@style/help_text"/>

                <LinearLayout
                    android:id="@+id/helpFaucetLL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/big_size"/>

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
