<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.IssueRgb20AssetFragment">

    <ProgressBar
        android:id="@+id/issuePB"
        style="@style/progress_bar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/issueScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/issueBtn"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginHorizontal="@dimen/big_size"
                android:layout_marginTop="@dimen/big_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tickerLabelTV"
                    android:text="@string/asset_ticker"
                    style="@style/et_label" />

                <EditText
                    android:id="@+id/tickerInputET"
                    android:digits="@string/uppercase_letters"
                    android:hint="@string/short_identifier"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textFilter|textNoSuggestions|textCapCharacters"
                    android:maxLength="8"
                    android:maxLines="1"
                    android:singleLine="true"
                    style="@style/et_text" />

                <TextView
                    android:id="@+id/nameLabelTV"
                    android:text="@string/asset_name"
                    style="@style/et_label" />

                <EditText
                    android:id="@+id/nameInputET"
                    android:digits="@string/letters_digits_space_and_dash"
                    android:hint="@string/name_of_the_asset"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textFilter|textNoSuggestions"
                    android:maxLength="32"
                    android:maxLines="1"
                    android:singleLine="true"
                    style="@style/et_text" />

                <TextView
                    android:id="@+id/amountLabelTV"
                    android:text="@string/total_supply"
                    style="@style/et_label"/>

                <EditText
                    android:id="@+id/amountInputET"
                    android:digits="0123456789"
                    android:hint="@string/amount_to_issue"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:importantForAutofill="no"
                    style="@style/et_text" />
            </LinearLayout>

        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/issueBtn"
            android:enabled="false"
            android:text="@string/issue_button"
            style="@style/main_button"
            app:layout_constraintTop_toBottomOf="@id/issueScrollView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
